--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -159,4 +159,5 @@
     <string name="help">Допомога</string>
     <string name="group_later">Подія розпочнеться пізніше</string>
     <string name="group_later_desc">%1$s розпочнеться %2$s о %3$s</string>
+    <string name="enter_confirmation_code">Введіть код підтвердження</string>
 </resources>
