add name input screen

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -162,4 +162,5 @@
     <string name="enter_confirmation_code">Введіть код підтвердження</string>
     <string name="phone_number" >Номер телефону</string>
     <string name="login_title_v2">Вхід</string>
+    <string name="enter_your_name">Введіть своє ім\'я, щоб ми знали, як до Вас звертатися</string>
 </resources>
