--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,5 +185,6 @@
     <string name="enter_confirmation_code">Enter confirmation code</string>
     <string name="login_title_v2">Enter</string>
     <string name="phone_number" >Phone number</string>
+    <string name="enter_your_name">Enter your name</string>
 
 </resources>
