--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -161,6 +161,7 @@
     <string name="enter_confirmation_code">Введите код подтверждения</string>
     <string name="login_title_v2">Вход</string>
     <string name="phone_number" >Номер телефона</string>
+    <string name="enter_your_name">Введите свое имя, чтобы мы знали, как к Вам обращаться</string>
 
 </resources>
 
