design of main screen

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -162,6 +162,7 @@
     <string name="login_title_v2">Вход</string>
     <string name="phone_number" >Номер телефона</string>
     <string name="enter_your_name">Введите свое имя, чтобы мы знали, как к Вам обращаться</string>
+    <string name="available_minutes">Доступные минуты</string>
 
 </resources>
 
