--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -163,4 +163,5 @@
     <string name="phone_number" >Номер телефону</string>
     <string name="login_title_v2">Вхід</string>
     <string name="enter_your_name">Введіть своє ім\'я, щоб ми знали, як до Вас звертатися</string>
+    <string name="available_minutes">Доступні хвилини</string>
 </resources>
