add my information screen

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -164,6 +164,8 @@
     <string name="enter_your_name">Введите свое имя, чтобы мы знали, как к Вам обращаться</string>
     <string name="available_minutes">Доступные минуты</string>
     <string name="qr_scanner">Qr сканер</string>
+    <string name="full_name">ФИО</string>
+    <string name="country_and_city">Страна город</string>
 
 </resources>
 
