--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,5 +188,7 @@
     <string name="enter_your_name">Enter your name</string>
     <string name="available_minutes">Available minutes</string>
     <string name="qr_scanner">Qr scanner</string>
+    <string name="full_name">Full name</string>
+    <string name="country_and_city">Country, city</string>
 
 </resources>
