--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,5 +190,9 @@
     <string name="qr_scanner">Qr scanner</string>
     <string name="full_name">Full name</string>
     <string name="country_and_city">Country, city</string>
+    <string name="country">Country</string>
+    <string name="city">City</string>
+    <string name="save">Save</string>
+    <string name="enter_later">Enter later</string>
 
 </resources>
