add new help activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,5 +194,7 @@
     <string name="city">City</string>
     <string name="save">Save</string>
     <string name="enter_later">Enter later</string>
+    <string name="viber">Viber</string>
+    <string name="whats_app">WhatsApp</string>
 
 </resources>
