--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -173,6 +173,7 @@
     <string name="tariff_choose">Выбор тарифа</string>
     <string name="choose">Выбрать</string>
     <string name="tariff_name_stub">Название тарифа</string>
+    <string name="compensation_step_fullname">Укажите свое ФИО, чтобы мы знали на кого оформлять компенсацию</string>
 
 </resources>
 
