--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -175,4 +175,5 @@
     <string name="choose">Вибрати</string>
     <string name="tariff_name_stub">Назва тарифу</string>
     <string name="compensation_step_fullname">Вкажіть своє ПІБ, щоб ми знали на кого оформляти компенсацію</string>
+    <string name="date_of_birth">Дата народження</string>
 </resources>
