--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -175,6 +175,7 @@
     <string name="tariff_name_stub">Название тарифа</string>
     <string name="compensation_step_fullname">Укажите свое ФИО, чтобы мы знали на кого оформлять компенсацию</string>
     <string name="date_of_birth">Дата рождения</string>
+    <string name="compensation_step_date_of_birth">Также, пожалуйста, укажите вашу дату рождения</string>
 
 </resources>
 
