--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -176,4 +176,5 @@
     <string name="tariff_name_stub">Назва тарифу</string>
     <string name="compensation_step_fullname">Вкажіть своє ПІБ, щоб ми знали на кого оформляти компенсацію</string>
     <string name="date_of_birth">Дата народження</string>
+    <string name="compensation_step_date_of_birth">Також, будь ласка, вкажіть вашу дату народження</string>
 </resources>
