--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,5 +201,6 @@
     <string name="tariff_name_stub">Tariff name</string>
     <string name="compensation_step_fullname">Enter your full name so that we know who to apply for compensation</string>
     <string name="date_of_birth">Date of birth</string>
+    <string name="compensation_step_date_of_birth">Also, please include your date of birth</string>
 
 </resources>
