--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -183,6 +183,9 @@
     <string name="enter_tax_payer_id">Введите ваш ИНН</string>
     <string name="compensation_step_tax_payer_id">Предоставьте данные идентификационного номера налогоплательщика</string>
     <string name="tax_payer_id">ИНН</string>
+    <string name="enter_insurance_id">Введите ваш СНИЛС</string>
+    <string name="compensation_step_insurance_id">Предоставьте данные страхового номера индивидуального лицевого счета</string>
+    <string name="insurance_id">СНИЛС</string>
 
 </resources>
 
