--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -110,9 +110,9 @@
     <string name="no_requests_desc">Ви можете попросити наших перекладачів пояснити за домогою ЖМ незрозумілий вам документ. Сфотографуйте його або оберіть з пристрою</string>
     <!--Вы можете попросить наших переводчиков обьяснить на РЖЯ документ или перевести ваше видео на РЖЯ в текст для слышаших-->
     <string name="no_requests_title">У вас щє не має заявок</string>
-    <string name="status_new">Нова</string>
+    <string name="status_new">Новий</string>
     <string name="status_assigned">У роботі</string>
-    <string name="status_closed">Закрита</string>
+    <string name="status_closed">Вирішене/Закритий</string>
     <string name="drawer_scan_qr">Сканер QR коду</string>
     <string name="btn_reconnect">Перепідключитися</string>
     <string name="btn_close">Закрити</string>
